Opened 15 years ago

Closed 14 years ago

#913 closed defect (fixed)

tiff g3fax: incorrect value of rows per strip

Reported by: ami_stuff Owned by:
Priority: important Component: avcodec
Version: git-master Keywords: tif regression roundup
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

fax2d.tif 1728x1082 1-bit b&w (G3/2D) facsimile
g3test.tif TIFF equivalent of g3test.g3 created by fax2tiff

http://download.osgeo.org/libtiff/old/v3.4pics.tar.gz

C:\>ffmpeg -i fax2d.tif out.bmp
ffmpeg version N-36635-gceb0dd9 Copyright (c) 2000-2012 the FFmpeg developers
  built on Jan  9 2012 17:39:58 with gcc 4.6.2
  configuration: --enable-gpl --enable-version3 --disable-w32threads --enable-ru
ntime-cpudetect --enable-avisynth --enable-bzlib --enable-frei0r --enable-libope
ncore-amrnb --enable-libopencore-amrwb --enable-libfreetype --enable-libgsm --en
able-libmp3lame --enable-libopenjpeg --enable-librtmp --enable-libschroedinger -
-enable-libspeex --enable-libtheora --enable-libvo-aacenc --enable-libvo-amrwben
c --enable-libvorbis --enable-libvpx --enable-libx264 --enable-libxavs --enable-
libxvid --enable-zlib
  libavutil      51. 34.100 / 51. 34.100
  libavcodec     53. 54.100 / 53. 54.100
  libavformat    53. 29.100 / 53. 29.100
  libavdevice    53.  4.100 / 53.  4.100
  libavfilter     2. 58.100 /  2. 58.100
  libswscale      2.  1.100 /  2.  1.100
  libswresample   0.  6.100 /  0.  6.100
  libpostproc    51.  2.100 / 51.  2.100
[tiff @ 02645B60] Incorrect value of rows per strip
[image2 @ 020E2320] Could not find codec parameters (Video: tiff)
fax2d.tif: could not find codec parameters
C:\>ffmpeg -i g3test.tif out.bmp
ffmpeg version N-36635-gceb0dd9 Copyright (c) 2000-2012 the FFmpeg developers
  built on Jan  9 2012 17:39:58 with gcc 4.6.2
  configuration: --enable-gpl --enable-version3 --disable-w32threads --enable-ru
ntime-cpudetect --enable-avisynth --enable-bzlib --enable-frei0r --enable-libope
ncore-amrnb --enable-libopencore-amrwb --enable-libfreetype --enable-libgsm --en
able-libmp3lame --enable-libopenjpeg --enable-librtmp --enable-libschroedinger -
-enable-libspeex --enable-libtheora --enable-libvo-aacenc --enable-libvo-amrwben
c --enable-libvorbis --enable-libvpx --enable-libx264 --enable-libxavs --enable-
libxvid --enable-zlib
  libavutil      51. 34.100 / 51. 34.100
  libavcodec     53. 54.100 / 53. 54.100
  libavformat    53. 29.100 / 53. 29.100
  libavdevice    53.  4.100 / 53.  4.100
  libavfilter     2. 58.100 /  2. 58.100
  libswscale      2.  1.100 /  2.  1.100
  libswresample   0.  6.100 /  0.  6.100
  libpostproc    51.  2.100 / 51.  2.100
[tiff @ 02645B60] Incorrect value of rows per strip
[image2 @ 020E2320] Could not find codec parameters (Video: tiff)
g3test.tif: could not find codec parameters

Attachments (4)

fax2d.tif (32.0 KB ) - added by ami_stuff 15 years ago.
g3test.tif (49.2 KB ) - added by ami_stuff 15 years ago.
rows.diff (710 bytes ) - added by ami_stuff 14 years ago.
tiff.diff (491 bytes ) - added by ami_stuff 14 years ago.

Download all attachments as: .zip

Change History (9)

by ami_stuff, 15 years ago

Attachment: fax2d.tif added

by ami_stuff, 15 years ago

Attachment: g3test.tif added

comment:1 by Carl Eugen Hoyos, 15 years ago

Component: undeterminedavcodec
Keywords: tif added
Priority: normalwish
Reproduced by developer: set
Status: newopen
Type: defectenhancement
Version: unspecifiedgit-master

by ami_stuff, 14 years ago

Attachment: rows.diff added

comment:2 by ami_stuff, 14 years ago

maybe something like attached patch?

https://codereview.appspot.com/4815061

Last edited 14 years ago by ami_stuff (previous) (diff)

comment:3 by ami_stuff, 14 years ago

this is a regression between

git-de545d2 (11-May-2011)

and

git-27614b1 (15-May-2011)

repleacing "s->avctx->height" with "s->height" fixes the problem

by ami_stuff, 14 years ago

Attachment: tiff.diff added

comment:4 by Carl Eugen Hoyos, 14 years ago

Keywords: regression roundup added
Priority: wishimportant
Type: enhancementdefect

Regression since bbc572a / 7215341, related to issue 1925.

comment:5 by Michael Niedermayer, 14 years ago

Resolution: fixed
Status: openclosed

patch applied

Note: See TracTickets for help on using tickets.