libavcodec/tiff.c
@@ -436,7 +436,7 @@ static int tiff_decode_tag(TiffContext *s, const uint8_t *start, const uint8_t *
         break;
     case TIFF_ROWSPERSTRIP:
         if(type == TIFF_LONG && value == -1)
-            value = s->avctx->height;
+            value = s->height;
         if(value < 1){
             av_log(s->avctx, AV_LOG_ERROR, "Incorrect value of rows per strip\n");
             return -1;
